--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'WashroomApp'
+include ':react-native-native-mqtt'
+project(':react-native-native-mqtt').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-native-mqtt/android')
 
 apply from: '../node_modules/react-native-unimodules/gradle.groovy'
 includeUnimodulesProjects()
