--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,4 +21,6 @@ target 'WashroomApp' do
   #  post_install do |installer|
   #    flipper_post_install(installer)
   #  end
+  pod 'react-native-native-mqtt', :path => '../node_modules/react-native-native-mqtt'
+
 end
