--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react-native": "~0.63.4",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-native-mqtt": "^0.1.8",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react_native_mqtt": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
