--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,4 +8,8 @@ includeUnimodulesProjects()
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
 applyNativeModulesSettingsGradle(settings)
 
+include ':react-native-mqtt-angelos3lex'
+project(':react-native-mqtt-angelos3lex').projectDir = new File(rootProject.projectDir,  '../node_modules/react-native-mqtt-angelos3lex/android')
+
+
 include ':app'
