--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@taoqf/react-native-mqtt": "^3.0.4",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "mqtt": "^4.2.6",
+    "mqtt-react": "0.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-mqtt-angelos3lex": "^0.4.26",
     "react-native-native-mqtt": "^0.1.8",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
