--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/stack": "^5.14.3",
     "@taoqf/react-native-mqtt": "^3.0.4",
     "ascoltatori": "^4.3.0",
+    "crypto": "^1.0.1",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "mqtt": "^4.2.6",
     "mqtt-react": "0.0.3",
+    "net": "^1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -33,7 +35,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react_native_mqtt": "^1.3.1"
+    "react_native_mqtt": "^1.3.1",
+    "sys": "0.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
